layout & content ready

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div>
         <h1 class="text-5xl font-bold">Sven Hohlfeld</h1>
         <h2>IT Consultant</h2>
-        <p class="py-6">Software Engineering in Go, Kotlin, Dart, Typescript & Java:</br>On premise &amp; cloud</p>
+        <p class="py-6 text-2xl">Software Engineering in Go, Kotlin, Dart, Typescript & Java:</br>On premise &amp; cloud</p>
         <button class="btn btn-primary shadow-2xl drop-shadow-xl shadow-cyan-300/30"
           onclick="profile-form.showModal()">Download complete profile pack</button>
         <dialog id="profile-form" class="modal modal-bottom sm:modal-middle">
