fixed submit button (was input) & Last individual form (will be replaced with google forms due to auth issues)

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 class="input input-bordered w-full max-w-xs" />
               <input id="phone" type="tel" placeholder="Your phone number (optional)?"
                 class="input input-bordered w-full max-w-xs" />
-              <input type="submit" class="btn btn-primary shadow-2xl drop-shadow-xl shadow-cyan-300/30" value="Send request" onsubmit="event.preventDefault();alert('foo');"></imput>
+              <button class="btn btn-primary shadow-2xl drop-shadow-xl shadow-cyan-300/30" onsubmit="event.preventDefault();alert('foo');">Send request</button>
             </div>
           </form>
             <div class="modal-action">
