--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html data-theme="winter" lang="en">
 
 <head>
+  <meta property="og:image" content="homepage-social.jpg">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1280">
+  <meta property="og:image:height" content="640">
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.2/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="tailwind-v3.3.3-min.js"></script>
 </head>
