rorg & graphic update

--- a/index.html
+++ b/index.html
@@ -2,10 +2,35 @@
 <html data-theme="winter" lang="en">
 
 <head>
-  <meta property="og:image" content="homepage-social.jpg">
-  <meta property="og:image:type" content="image/png">
+  <!-- HTML Meta Tags -->
+  <title>Sven Hohlfeld IT Consultant freelancer</title>
+  <meta name="description"
+    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your software projects a successs.">
+
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Sven Hohlfeld IT Consultant freelancer">
+  <meta itemprop="description"
+    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your transformational software projects a successs.">
+  <meta itemprop="image" content="https://www.sven-hohlfeld.de/homepage-social.jpg">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:image" content="https://www.sven-hohlfeld.de/img/homepage-social.jpg">
+  <meta property="og:image:type" content="image/jpg">
   <meta property="og:image:width" content="1280">
   <meta property="og:image:height" content="640">
+  <meta property="og:url" content="https://www.sven-hohlfeld.de">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Sven Hohlfeld IT Consultant freelancer">
+  <meta property="og:description"
+    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your transformational software projects a successs.">
+
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Sven Hohlfeld IT Consultant freelancer">
+  <meta name="twitter:description"
+    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your transformational software projects a successs.">
+  <meta name="twitter:image" content="https://www.sven-hohlfeld.de/img/homepage-social.jpg">
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.2/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="tailwind-v3.3.3-min.js"></script>
 </head>
@@ -13,8 +38,7 @@
 <body>
   <div class="hero min-h-screen bg-base-200">
     <div class="hero-content flex-col lg:flex-row-reverse rounded-2xl shadow-2xl shadow-cyan-400/40">
-      <img src="https://2.gravatar.com/avatar/f94887e05d551f342e359df64e87a07056990937fb65a259a882d1a33a58cd45?size=800"
-        class="max-w-sm rounded-2xl shadow-2xl" />
+      <img src="img/face-round.png" class="max-w-sm rounded-2xl drop-shadow-2xl" />
       <div>
         <h1 class="text-5xl font-bold">Sven Hohlfeld</h1>
         <h2>IT Consultant</h2>
