--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <!-- HTML Meta Tags -->
   <title>Sven Hohlfeld IT Consultant freelancer</title>
   <meta name="description"
-    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your software projects a successs.">
+    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your software projects a success.">
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="Sven Hohlfeld IT Consultant freelancer">
   <meta itemprop="description"
-    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your transformational software projects a successs.">
+    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your transformational software projects a success.">
   <meta itemprop="image" content="https://www.sven-hohlfeld.de/homepage-social.jpg">
 
   <!-- Facebook Meta Tags -->
@@ -22,14 +22,14 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Sven Hohlfeld IT Consultant freelancer">
   <meta property="og:description"
-    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your transformational software projects a successs.">
+    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your transformational software projects a success.">
 
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Sven Hohlfeld IT Consultant freelancer">
   <meta name="twitter:description"
-    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your transformational software projects a successs.">
+    content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your transformational software projects a success.">
   <meta name="twitter:image" content="https://www.sven-hohlfeld.de/img/homepage-social.jpg">
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.2/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="tailwind-v3.3.3-min.js"></script>
