added real aws connect phone

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta name="twitter:description"
     content="Sven Hohlfeld helps you building your software in go, java, kotlin or typescript making your transformational software projects a success.">
   <meta name="twitter:image" content="https://www.sven-hohlfeld.de/img/homepage-social.jpg">
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.2/dist/full.css" rel="stylesheet" type="text/css" />
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@3.8.2/dist/full.css" rel="stylesheet" type="text/css" />t
   <script src="tailwind-v3.3.3-min.js"></script>
 </head>
 
@@ -95,7 +95,7 @@
             Vertreten durch:<br />
             Sven Hohlfeld<br />
             Kontakt:<br />
-            Telefon: in Vorbereitung<br />
+            Telefon: +49 511 44473972<br />
             E-Mail: <a
               href="mailto:projects@sven-hohlfeld.de?subject=Homepage project request">projects@sven-hohlfeld.de</a></p>
           <p class="py-4 text-left">
